sass: pagination: fix right alignment

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -108,7 +108,7 @@
     padding: 0.5em 0em;
     font-size: $type-size-5;
 
-    .right {
+    &.right {
       text-align: end;
     }
   }
